--- a/gb/24/2/11/n14178910.md
+++ b/gb/24/2/11/n14178910.md
@@ -1,34 +1,34 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：邓小平为什么要制造“六四”屠杀？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/02/id14178911-GettyImages-1233224445-600x400.jpeg" />
 <h6>美国洛杉矶和拉斯维加斯之间的15号公路旁，矗立着艺术家陈伟明创作的“六四坦克人”纪念雕塑。(Frederic J. Brown/AFP via Getty Images)
 </h6>
 <hr>
 	<p>【大纪元2024年02月12日讯】1989年6月4日，北京发生震惊世界的天安门屠杀事件。</p>
-<p>根据<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E2%80%9C%E5%85%AD%E5%9B%9B%E2%80%9D%E5%B1%A0%E6%9D%80.md#1">“六四”屠杀</a>后被打倒的前中共中央总书记<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B5%B5%E7%B4%AB%E9%98%B3.md#1">赵紫阳</a>的回忆录《改革历程》的说法，1989年6月3日晚至6月4日，北京没有发生“反革命暴乱”，发生的是一场由<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%82%93%E5%B0%8F%E5%B9%B3.md#1">邓小平</a>决定，动用军队、机枪和坦克对和平抗议的学生和民众的屠杀。</p>
-<p>关于邓动用军队的确切数字，中共官方从未公布。从中共党媒报道看，邓调到北京的，至少有北京、沈阳、济南三个军区的27、38、 39、63四个集团军的部队，包括15、20、24、26、27、28、38、39、40、54、63、65、67共13个军，大约15至25万人。</p>
+<p>根据“六四”屠杀后被打倒的前中共中央总书记赵紫阳的回忆录《改革历程》的说法，1989年6月3日晚至6月4日，北京没有发生“反革命暴乱”，发生的是一场由邓小平决定，动用军队、机枪和坦克对和平抗议的学生和民众的屠杀。</p>
+<p>关于邓动用军队的确切数字，中共官方从未公布。从中共党媒报导看，邓调到北京的，至少有北京、沈阳、济南三个军区的27、38、 39、63四个集团军的部队，包括15、20、24、26、27、28、38、39、40、54、63、65、67共13个军，大约15至25万人。</p>
 <p>这次屠杀死了多少人呢？</p>
 <p>2014年美国白宫解密文件显示，约有10,454人死亡、40,000人受伤（白宫的报告引述自戒严部队的消息人士提供的中南海内部文件）。</p>
-<h2><strong><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B5%B5%E7%B4%AB%E9%98%B3.md#1">赵紫阳</a>的质疑</strong></h2>
+<h2><strong>赵紫阳的质疑</strong></h2>
 <p>赵紫阳在他的回忆录中，对1989年中共关于“六四”学生民主运动的说法提出了三点疑问：</p>
 <p>“第一，当时说学潮是一场有领导、有计划、有预谋的‘反党反社会主义’的政治斗争。现在可以问一下，究竟是什么人在领导？如何计划，如何预谋的？”有哪些材料能够说明这一点？</p>
 <p>第二，当时说这场“动乱”的目的是要颠覆国家政权，推翻共产党的领导，这方面又有什么材料？我当时就说过，多数人是要我们改正错误，而不是要推翻我们的制度。这么多年过去了，审讯中得到什么材料？究竟是我说得对还是他们说得对？</p>
 <p>第三，将“六四”定性为反革命暴乱，能不能站得住脚？学生一直是守秩序的。不少材料说明，在解放军遭到围攻时，许多地方反而是学生来保护解放军。大量市民阻拦解放军进城，究竟是为了什么？是要推翻国家政权吗？</p>
 <p>很显然，赵紫阳不相信中共的说辞。</p>
-<h2><strong><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%82%93%E5%B0%8F%E5%B9%B3.md#1">邓小平</a>为什么要制造<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E2%80%9C%E5%85%AD%E5%9B%9B%E2%80%9D%E5%B1%A0%E6%9D%80.md#1">“六四”屠杀</a>？</strong></h2>
+<h2><strong>邓小平为什么要制造“六四”屠杀？</strong></h2>
 <p>我认为，主要有三个原因：</p>
 <h3><strong>第一，杀人是共产党夺取政权、巩固政权、维持政权最重要的手段。</strong></h3>
 <p>崇尚暴力，是中共老祖宗马克思留给后代共产党人最重要的基因之一。</p>
 <p>1848年，马克思在《共产党宣言》中指出：“共产党人不屑于隐瞒自己的观点和意图。他们公开宣布：他们的目的只有用暴力推翻全部现存的社会制度才能达到。”</p>
 <p>马克思的大徒弟列宁，不仅崇尚暴力，而且直接以杀人立威，以杀人治国。1920年10月20日，列宁在《关于专政问题的历史》中写道：“专政的科学概念无非是不受任何限制的、绝对不受任何法律或规章约束而直接依靠暴力的政权。”</p>
 <p>1917年列宁通过十月政变夺取政权后，大开杀戒。据俄罗斯历史学家祖博夫主编《二十世纪俄国史》记载，仅1918到1922年2月，列宁杀了不少于200万人。</p>
-<p>马克思的另一个徒弟毛泽东，当政27年，发动了几十场血腥残暴的政治运动，杀了8000万中国人。利用“枪杆子”（军队）、“刀把子”（专政机器），让亿万中国民众恐惧，是毛维护极权统治的利器。</p>
+<p>马克思的另一个徒弟毛泽东，当政27年，发动了几十场血腥残暴的政治运动，杀了8,000万中国人。利用“枪杆子”（军队）、“刀把子”（专政机器），让亿万中国民众恐惧，是毛维护极权统治的利器。</p>
 <p>邓小平当政后，没有担任过党、国家、政府的最高领导职务——中共中央总书记、国家主席、国务院总理，却长期担任中央军委主席。为什么？邓跟毛一样，崇尚“以枪杆子治国”，只要邓感到他的绝对权威受到威胁，他就会开杀戒。</p>
 <h3><strong>第二，废掉时任中共中央总书记赵紫阳的需要。</strong></h3>
 <p>邓小平1978年发起改革开放后，提出了一个重要观点：“让一部分人先富起来。”这一部分人是什么人呢？就是以邓小平为首的中共元老的子女们，包括邓小平的长子邓朴方。</p>
-<p>但是，在1989年六四前，赵紫阳竟然下令调查邓朴方的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BA%B7%E5%8D%8E%E5%85%AC%E5%8F%B8.md#1">康华公司</a>。</p>
+<p>但是，在1989年“六四”前，赵紫阳竟然下令调查邓朴方的康华公司。</p>
 <p>据赵紫阳的政治秘书鲍彤回忆：“我认为邓家，邓小平家里对当时调查康华（公司）案件不满意。这有什么根据？我有根据。我当时是政治体制改革研究室的主任，当时给我的主要议题是中国的廉政问题。有一天，邓小平的女儿邓楠跑到我的办公室来说：‘老鲍，为什么要查康华？’我告诉她说：查康华是国务院的决定。</p>
 <p>“她问为什么要查呢？我说现在对康华有很多意见，老百姓中有意见，干部中有意见，中央各部有意见，地方上也有意见。如果查清楚了朴方很好，那不是还朴方一个清白吗？如果查清楚了朴方在财务上有什么漏洞，那就改正错误。那不是很好吗？对以后工作更好吗？”</p>
 <p>邓楠听了鲍彤的说法后，竟然说：“老娘有意见！”拂袖而去。</p>
@@ -47,7 +47,7 @@
 <p>在军队内，有张爱萍、萧克、叶飞、李聚奎、杨得志、陈再道、宋时轮等七名上将反对军队镇压学生。</p>
 <p>38军军长徐勤先少将，以“军令不全不合法、没有正式书面通知”为由，拒绝带部队进北京。</p>
 <p>陆军第28集团军政委张明春少将与军长何燕然少将，虽然奉命带领部队从驻地山西省大同市急赴北京执行戒严令，但消极抗命，其所带领的部队成为“六四事件”中唯一一支没有按时抵达指定位置的戒严部队。这表明，他们不愿参与屠杀学生。</p>
-<p>“六四”屠杀后，赵紫阳被扣上“分裂党”、“支持动乱”的罪名，撤销中共中央总书记等所有职务，仅保留党籍。</p>
+<p>“六四”屠杀后，赵紫阳被扣上“分裂党”“支持动乱”的罪名，撤销中共中央总书记等所有职务，仅保留党籍。</p>
 <h3><strong>第三，坚持所谓“四项基本原则”的需要。</strong></h3>
 <p>1978年邓小平发起改革开放，实际上，是因为毛泽东发动十年文革把中共折腾到亡党的边缘，为拯救中共于危亡，而采取的措施。</p>
 <p>邓的改革开放有一个前提条件，就是必须坚持所谓“四项基本原则”，即坚持马列主义，坚持社会主义，坚持人民民主专政，坚持党的领导。</p>
@@ -57,12 +57,12 @@
 <p>邓虽然多次讲过要退休，干部要年轻化，但邓并不想放弃他这个中央军委主席对党的绝对领导权。</p>
 <p>1986年夏，邓小平找胡耀邦谈话，就中共十三大的人选谈自己的看法。邓说：“我全下，辞去军委主席，你半下，接我的军委职务，紫阳也半下，去当国家主席，总书记和总理都让年轻人去做。”</p>
 <p>邓实际是在试探胡会如何反应。胡没有细想，信以为真，内心高兴，管不住自己的嘴，很快将这次仅限于邓、胡之间的谈话泄露出去了。</p>
-<p>胡的这个做法触犯了邓<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%80%E5%A4%A7%E7%9A%84%E7%A6%81%E5%BF%8C.md#1">最大的禁忌</a>。</p>
+<p>胡的这个做法触犯了邓最大的禁忌。</p>
 <p>1987年中共十三大上，赵紫阳当选中共中央总书记，邓仅以党员的身份，继续担任中央军委主席。</p>
 <p>表面上，赵紫阳是中共最高领导人。实质上，邓是中共最高领导人。</p>
 <p>1989年4月25日，邓小平在听取国务院总理李鹏等的汇报后，将学潮定性为反党反社会主义的动乱。4月26日，根据邓的指示，《人民日报》发表社论《旗帜鲜明地反对动乱》。</p>
 <p>对于邓的这个决策，赵紫阳至少四次违逆邓的意志。</p>
-<p>第一次是5月3日在纪念五四运动周年的讲话中，赵肯定学生的爱国热情，强调维稳的重要，却只字未提“动乱”。</p>
+<p>第一次是5月3日在纪念“五四运动”周年的讲话中，赵肯定学生的爱国热情，强调维稳的重要，却只字未提“动乱”。</p>
 <p>第二次是5月4日在会见亚洲银行理事年会代表的讲话中，赵提出在民主、法制的轨道上，以协商、对话的方式解决问题，只字未提“动乱”。</p>
 <p>第三次是5月16日在中共政治局常委会会议上，赵提出各方面对4.26社论的反映很大，已成为影响学生情绪的一个结子。可否以适当的方式，解开这个结子，以缓解学生的情绪。李鹏说，社论中所说的“这是一场有计划的阴谋”、“是一次动乱”、“其实质是要从根本上否定中国共产党的领导、否定社会主义制度”、“这是摆在全党全国各族人民面前的一场严重的政治斗争”是邓小平的原话，不能动。赵明确表示不同意。</p>
 <p>第四次是5月17日邓提出调军队进北京后，赵不同意邓的决策，提出辞职，与主张动武的邓划清界限。</p>
@@ -78,42 +78,38 @@
 <p>邓亲手终结了中共的政治体制改革，等于终结了中共的经济体制改革。</p>
 <p>时至今日，中共的改革开放已死。中共所有关于“坚持改革开放”的说法，不过是在空喊口号而已。</p>
 <p>大纪元首发</p>
-<p>责任编辑：高义</p>
+<p>责任编辑：高义#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/26/n14166761.md#1">王友群：没有鸦片烟就没有共产党？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170738.md#1">王友群：江青的前男友黄敬被毛泽东吓死了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172369.md#1">王友群：邓小平为何撤了国安部长凌云的职？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/9/n14177393.md#1">王友群：中共为何查禁这本收录中共言论的书？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">Samsonite Aspire DLX软边可扩展行李箱2件套 折扣55%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165769.md#1">这种杯子为何如此火爆 加州女子偷65个被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">更新：手柄可拆卸11件套锅具 6折优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/26/n14166761.md#1">王友群：没有鸦片烟就没有共产党？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/31/n14170738.md#1">王友群：江青的前男友黄敬被毛泽东吓死了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/2/n14172369.md#1">王友群：邓小平为何撤了国安部长凌云的职？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/9/n14177393.md#1">王友群：中共为何查禁这本收录中共言论的书？</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/11/27/n9898377.md#1" target="_blank">折断的蝴蝶翅膀──慈禧御前女官舞蹈家裕容龄</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/11/1/21/n3149437.md#1" target="_blank">追查国际关于天安门自焚伪案十年说明</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/14/n11257164.md#1" target="_blank">【征文】凌晓辉：贞洁论（四）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/20/n10923009.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（3）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14171656.md#1">我们竟然过了一百年的假“春节”？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/6/n14174422.md#1">大马网红晒11年前旧照 同框陌生人竟是丈夫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/4/n14173543.md#1">【未解之谜】一切皆有定数？预言中的中国未来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/5/n14174106.md#1">围炉过年：从除夕到元日的民俗守护人心中的善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/1/n14170820.md#1">过年习俗：腊月到正月 22天不重样！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/9/n14177489.md#1">【新闻五人行】幕后解密 五人行如何觉醒？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/9/n14177495.md#1">【菁英论坛】年末奇葩 “熊段子”火遍美国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/11/n14178603.md#1">【时事军事】台湾F-16变身蝰蛇 空地通吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/9/n14176916.md#1">陆国产电车尴尬：趴窝 数十辆车抢充电桩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/9/n14177078.md#1">岳山：两军委副主席内斗信息 借党媒释出？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/5/n14173646.md#1">新唐人播出全球华人新年晚会——神韵晚会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/10/n14178009.md#1">央视春晚魔术再穿帮 刘谦被爆含泪离开舞台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/8/n14176735.md#1">曾获封“陈奕迅接班人” 吴浩康转行当建筑工</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/9/n14177390.md#1">好莱坞男星最高收入前十名 阿汤哥稳居第一</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/8/n14176806.md#1">受访称体谅梅西缺阵 港星高海宁遭到攻击</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/10/n14177994.md#1">楚一丁：《繁花》，一场在恐惧中绽放的梦幻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/7/n14175936.md#1">厨房清洁无异味 正确使用小苏打6招必学</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/10/n14177614.md#1">恒大玩掉整个中国？美国经济研究所早预见危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/5/n14174251.md#1">童话开始的地方 拍摄新天鹅堡雪景的冒险之旅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/9/n14177356.md#1">不敢吃鸡蛋？资深中医师：吃对反降胆固醇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/8/n14176798.md#1">2024年买车 专家不看好哪些新车</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/11/n14178910.htm">王友群：邓小平为什么要制造“六四”屠杀？</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/2/11/n14178910.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/2/11/n14178910.htm">王友群：邓小平为什么要制造“六四”屠杀？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/2/11/n14178910.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
